# TT-tournament

./: .dockerignore  .gitignore  ADMIN_MAINTENANCE.md  ARCHITECTURE.md  CHANGELOG.md  COMPLETION_CHECKLIST.md  DEV_NOTES.md  Dockerfile  QUICKSTART.md  QUICK_WINS.md  README.md  REFACTORING_SUMMARY.md  RESEARCH_SUMMARY.md  SETUP_COMPLETE.md  SETUP_FINISHED.md  SETUP_GUIDE.md  STREAMLIT_CLOUD_SETUP.md  TROUBLESHOOTING.md  VOICE_SCOREKEEPER.md  alembic.ini  check_env.py  check_env_debug.py  check_ollama_debug.py  check_schema.py  check_tables.py  docker-compose.yml  initialize_rag.py  models.py  pyproject.toml  requirements.txt  rollback_backup_20260720_170123.patch  seed_quick_win_demo.py  status.py  streamlit_app.py  test_api.py  verify_setup.py
.streamlit/: config.toml
alembic/: env.py  script.py.mako
api/: server.py
app/: main.py  utils.py
data/: bracket.json  tournament.db
docs/: API_COMPATIBILITY.md  PIPER_TTS_SETUP.md  WORKFLOW_MAPPING.md  datasets.md  voice-scoring.md
plans/: 1784556573435-audio-rally-assistant-plan.md  1784634114546-fix-continuous-voice-audio-pipeline.md  AI_OPERATOR_IMPLEMENTATION_PLAN.md  ai_ui_improvement_plan.md  multimodal_ai_implementation_plan.md  page_consolidation_implementation.md  page_consolidation_plan.md  phase0_baseline_report.md  phase0_implementation_plan  phase0_implementation_plan.md  phase2_5_architecture_plan.md  ping_score_port_plan.md  quick_wins_implementation_plan.md  ux_redesign_architecture_plan.md  ux_redesign_implementation_plan.md  video_scorekeeper_plan.md  voice_scorekeeper_coaching_plan.md  voice_scorekeeper_commentary_plan.md  voice_scorekeeper_continuous_listening_fix.md  voice_scorekeeper_dataset_training_plan.md  voice_scorekeeper_future_roadmap.md  voice_scorekeeper_implementation_plan.md  voice_scorekeeper_local_asr_plan.md  voice_scorekeeper_realtime_plan.md
scripts/: backup_sqlite_db.py  download_datasets.py  extract_dataset_features.py  index_rag.py  run_local_coaching_demo.py  smoke_migration.py  smoke_test_piper.py  train_intent_classifier.py  validate_datasets.py
services/: __init__.py  ai_engine.py  bracket_manager.py  calendar_service.py  rules_ingestion.py  rules_retrieval.py  speech_service.py  tournament_engine.py
teams/: TEAMS_SETUP.md  manifest.json
tests/: test_active_context_bar.py  test_admin_maintenance.py  test_admin_tabs.py  (+96 more)
(+364 files in other folders)
