[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tournament-platform"
version = "1.0.0"
description = "A modern tournament management platform with AI-powered match analysis"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Tournament Platform Team"}
]
keywords = ["tournament", "sports", "management", "streamlit", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "streamlit>=1.58.0",
    "fastapi>=0.137.1",
    "sqlalchemy>=2.0.51",
    "alembic>=1.18.4",
    "ollama>=0.6.2",
    "chromadb>=1.5.9",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.0.0",
    "plotly>=6.8.0",
    "streamlit-aggrid>=1.2.1",
    "streamlit-authenticator==0.3.2",
    "streamlit-shadcn-ui>=0.1.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "faster-whisper>=1.0.0",
    "speechrecognition>=3.10.0",
    "pyttsx3>=2.90",
    "langchain-community>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "langchain-ollama>=0.1.0",
    "semantic-kernel>=0.9.0",
    "msal>=1.28.0",
    "msgraph-sdk>=1.0.0",
    "ranking-table-tennis>=0.1.0",
    "bracketool>=0.1.0",
    "round-robin-tournament>=0.1.0",
    "itables>=2.0.0",
    "streamlit-webrtc>=0.75,<0.76",
    "av>=12.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
video = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]
live = [
    "vosk>=0.3.45",
    "pyaudio>=0.2.11",
]
speech = [
    "speechbrain>=1.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]
tts = [
    "piper-tts>=1.4,<2",
]

[tool.setuptools]
packages = [
    "tournament_ai",
    "tournament_core",
    "tournament_platform",
]

[project.scripts]
tournament-platform = "tournament_platform.app.main:main"
tournament-platform-api = "tournament_platform.api.server:run_api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
